unpackaged/main/default/objects/OrderApi__Renewal__c/OrderApi__Renewal__c.object-meta.xml
<CustomObject>
    <description>Terms track the Subscription terms, dates for all Customer Subscriptions.</description>
    <label>Term</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Term ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>