unpackaged/main/default/objects/OrderApi__Renewal__c/fields/Legacy_Term_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Term_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Term ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>