unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Term to the Account</description>
    <inlineHelpText>Relates the Term to the Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Terms</relationshipName>
    <type>Lookup</type>
</CustomField>