unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Active_Assignments__c</fullName>
    <description>System Calculated ** Counts the number of assignments that are marked active for the term.</description>
    <inlineHelpText>System Calculated ** Counts the number of assignments that are marked active for the term.</inlineHelpText>
    <label>Active Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>