unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Assignments_Allowed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignments_Allowed__c</fullName>
    <description>System Calculated ** The number of Assignments allowed for the term.</description>
    <inlineHelpText>System Calculated ** The number of Assignments allowed for the term.</inlineHelpText>
    <label>Assignments Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>