unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Cancellation_Requested__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Cancellation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the customer requests to cancel their membership. To enable this in the community, enable cancellations on the item.</description>
    <inlineHelpText>This field is checked when the customer requests to cancel their membership. To enable this in the community, enable cancellations on the item.</inlineHelpText>
    <label>Cancellation Requested</label>
    <type>Checkbox</type>
</CustomField>