unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Days_To_Lapse__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Days_To_Lapse__c</fullName>
    <description>System Calculated ** Defines the remaining number of days until the end of the Term.</description>
    <inlineHelpText>System Calculated ** Defines the remaining number of days until the end of the Term.</inlineHelpText>
    <label>Days to Lapse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>