unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Dues_Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Dues_Total__c</fullName>
    <description>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</description>
    <inlineHelpText>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</inlineHelpText>
    <label>Dues Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>