unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Grace_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Grace_Period_End_Date__c</fullName>
    <description>This date is calculated by the Term End Date plus the number of days defined on the Subscription Plan&#39;s Grace Period field.</description>
    <inlineHelpText>This date is calculated by the Term End Date plus the number of days defined on the Subscription Plan&#39;s Grace Period field.</inlineHelpText>
    <label>Grace Period End Date</label>
    <type>Date</type>
</CustomField>