unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the active subscription term.</description>
    <inlineHelpText>Defines the active subscription term.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>