unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Is_Changed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System Calculated ** This field identifies terms that have been changed and needed a new term created as a result.</description>
    <inlineHelpText>System Calculated ** This field identifies terms that have been changed and needed a new term created as a result.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>