unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Calculated Required Override ** Link to the primary &quot;Subscription&quot; Item.</description>
    <inlineHelpText>System Calculated Required Override ** Link to the primary &quot;Subscription&quot; Item.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Terms</relationshipName>
    <type>Lookup</type>
</CustomField>