unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Last_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Last_Amendment_Date__c</fullName>
    <description>System Calculated ** The date the Subscription was last amended.</description>
    <inlineHelpText>System Calculated ** The date the Subscription was last amended.</inlineHelpText>
    <label>RESERVED</label>
    <type>Date</type>
</CustomField>