unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Next_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Next_Invoice_Due_Date__c</fullName>
    <description>System Calculated ** The date the next invoice is due for the Subscription.</description>
    <inlineHelpText>System Calculated ** The date the next invoice is due for the Subscription.</inlineHelpText>
    <label>Next Invoice Due Date</label>
    <type>Date</type>
</CustomField>