unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Next_Scheduled_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Next_Scheduled_Payment_Date__c</fullName>
    <description>System Calculated ** The date the next payment is scheduled to be processed for the Subscription.</description>
    <inlineHelpText>System Calculated ** The date the next payment is scheduled to be processed for the Subscription.</inlineHelpText>
    <label>Next Scheduled Payment Date</label>
    <type>Date</type>
</CustomField>