unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Next_Term_Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Next_Term_Renewed_Date__c</fullName>
    <description>This field defines the date that the subscription term was renewed to a new term.</description>
    <inlineHelpText>This field defines the date that the subscription term was renewed to a new term.</inlineHelpText>
    <label>Next Term Renewed Date</label>
    <type>Date</type>
</CustomField>