unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Previous_Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Previous_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Calculated ** Defines the next term to be activated as a result of a renewal purchase.</description>
    <inlineHelpText>System Calculated ** Defines the next term to be activated as a result of a renewal purchase.</inlineHelpText>
    <label>Previous Term</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Next Term</relationshipLabel>
    <relationshipName>Next_Term</relationshipName>
    <type>Lookup</type>
</CustomField>