unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Renewal_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renewal_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Calculated ** The Sales Order defined in this field was generated by the system for the next renewal.</description>
    <inlineHelpText>System Calculated ** The Sales Order defined in this field was generated by the system for the next renewal.</inlineHelpText>
    <label>Renewal Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>RenewalSalesOrders</relationshipName>
    <type>Lookup</type>
</CustomField>