unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renewed_Date__c</fullName>
    <description>** System Calculated Required Override ** The date the customer renewed the Subscription.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the customer renewed the Subscription.</inlineHelpText>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>