unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Related Sales Order (source).</description>
    <inlineHelpText>** System Calculated ** Related Sales Order (source).</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>