unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription__c</fullName>
    <description>** System Calculated Required ** Link to related Subscription</description>
    <inlineHelpText>** System Calculated Required ** Link to related Subscription</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>