unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Calculated Required Override ** Link to the Subscription Plan.</description>
    <inlineHelpText>** System Calculated ** Link to related Subscription Plan</inlineHelpText>
    <label>Subscription Plan</label>
    <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>