unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term_End_Date__c</fullName>
    <description>** System Calculated Required Override ** The date the term ends.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the term ends.</inlineHelpText>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>