unpackaged/main/default/objects/OrderApi__Renewal__c/fields/OrderApi__Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term_Start_Date__c</fullName>
    <description>** System Calculated Required Override ** The date the term begins.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the term begins.</inlineHelpText>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>